# renoir

./: .gitignore  .travis.yml  CHANGES.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  tests.yml
docs/: README.md  extensions.md  installation.md  quickstart.md  tree.yml
renoir/: __init__.py  _internal.py  _shortcuts.py  apis.py  cache.py  constants.py  contents.py  debug.py  errors.py  extensions.py  helpers.py  lexers.py  parser.py  typing.py  writers.py
renoir/parsing/: __init__.py  contents.py  lexers.py  parser.py  parsers.py  stack.py
tests/: test_cache.py  test_extensions.py  test_parser.py  test_parsers.py  test_render.py  test_templater.py
tests/blocks/: child.txt  child_multi_incl.txt  parent.txt  parent_incl.txt  parent_multi_incl.txt  parent_noincl.txt
tests/html/: _header.html  layout.html  pre.html  pyerror.html  test.html  test2.html
tests/templates/: layout.html
tests/yaml/: _inclusion.1.yaml  _inclusion.2.yaml  _inclusion.3.yaml  _inclusion.4.yaml  _inclusion.yaml  basic.yaml  blocks.yaml  nested.yaml
