[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "renoir"
version = "1.8.0"
description = "A templating engine designed with simplicity in mind"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.8"

authors = [
    { name = "Giovanni Barillari", email = "g@baro.dev" }
]

keywords = ["templates", "html", "web"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML"
]

[project.urls]
Homepage = 'https://github.com/emmett-framework/renoir'
Documentation = 'https://github.com/emmett-framework/renoir/docs'
Funding = 'https://github.com/sponsors/gi0baro'
Source = 'https://github.com/emmett-framework/renoir'
Issues = 'https://github.com/emmett-framework/renoir/issues'

[tool.hatch.build.targets.sdist]
include = [
    '/README.md',
    '/CHANGES.md',
    '/LICENSE',
    '/docs',
    '/renoir',
    '/tests',
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = 'double'

[tool.ruff.lint]
extend-select = [
    # E and F are enabled by default
    'B',      # flake8-bugbear
    'C4',     # flake8-comprehensions
    'C90',    # mccabe
    'I',      # isort
    'N',      # pep8-naming
    'Q',      # flake8-quotes
    'RUF100', # ruff (unused noqa)
    'S',      # flake8-bandit
    'W',      # pycodestyle
]
extend-ignore = [
    'B006', # mutable function args are fine
    'B008', # function calls in args defaults are fine
    'B009', # getattr with constants is fine
    'B034', # re.split won't confuse us
    'B904', # rising without from is fine
    'E731', # assigning lambdas is fine
    'F403', # import * is fine
    'N801', # leave to us class naming
    'N802', # leave to us method naming
    'N806', # leave to us var naming
    'N811', # leave to us var naming
    'N814', # leave to us var naming
    'N818', # leave to us exceptions naming
    'S101', # assert is fine
    'S102', # exec is fine
    'S104', # leave to us security
    'S105', # leave to us security
    'S106', # leave to us security
    'S107', # leave to us security
    'S110', # pass on exceptions is fine
    'S301', # leave to us security
    'S307', # leave to us security
    'S324', # leave to us security
]
mccabe = { max-complexity = 44 }

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
known-first-party = ['renoir', 'tests']

[tool.ruff.lint.per-file-ignores]
'renoir/__init__.py' = ['F401']
'renoir/parsing/__init__.py' = ['F401']
'tests/**' = ['B017', 'B018', 'E711', 'E712', 'E741', 'F841', 'S110', 'S501']

[tool.uv]
dev-dependencies = [
    "pytest>=7.4",
    "pyyaml>=6.0.1",
    "ruff~=0.5.0",
]
